# ME492Fall2024

./: .gitignore  README.md
assignments/homework1/: compute_areas.py  compute_areas_template.py
assignments/homework1/diamond/: points_only.csv
assignments/homework1/rectangle/: points_and_elements.csv  points_only.csv
assignments/homework1/simple_square/: points_and_elements.csv
assignments/homework1/square/: points_and_elements.csv  points_only.csv
assignments/homework1/square_minus_diamond/: points_only.csv
assignments/homework1/square_minus_star/: points_only.csv
assignments/homework1/star/: points_only.csv
assignments/homework1/triangle/: points_and_elements.csv  points_only.csv
assignments/homework2/: circuit.py  elements.py  grader.ipynb  matrix.py  node.py  sample_grader.ipynb  sub_grader.py  test_case_builder.py
assignments/homework2/hidden_circuits/: readme.md
cpp/: CMakeLists.txt
cpp/homework4/: BungeeJump.cpp  BungeeJump.h  BungeeJumpParameters.cpp  BungeeJumpParameters.h  CMakeLists.txt  main.cpp
cpp/practice_01/: CMakeLists.txt  main.cpp
cpp/practice_02/: CMakeLists.txt  MathFunctions.cpp  MathFunctions.h  main.cpp
cpp/practice_03/: CMakeLists.txt  GeometryData.cpp  GeometryData.h  GeometryReader.cpp  GeometryReader.h  GeometryWriter.cpp  GeometryWriter.h  MathFunctions.cpp  MathFunctions.h  main.cpp
py/: check_attendance.py  student_data.json
workspace/: kimjw43  print_name_time.py
workspace/0109taehoon/: hello.py
workspace/aimer1/: print_name_time.py
workspace/aleph-null/: print_name_and_time.py
workspace/anna5031/: name_and_time.py
workspace/gmmyung/: name_and_time.py
workspace/jhhan04/: name_time.py
workspace/jhpark31/: print_name_time.py
workspace/joonseo/: nametime.py
workspace/jsh99/: namentime.py
workspace/kim.hyunjin/: hello.py
workspace/kimjw43/: print_name_time.py
workspace/kopgh8026/: nametime.py
workspace/leohyun777/: name_time.py
workspace/mwhasanid/: name_time.py
workspace/namtg002/: print_name.py
workspace/osg2313/: hello.py
workspace/rapael6696/: namentime.py
workspace/star_doh/: nametime.py
workspace/tory453/: nameandtime.py
